<resources>
  <string name="app_name">Bilgi Android Demo One</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>


  <string name="poly_text_view">Polynomial Coef.</string>
  <string name="poly_edit_text">0.0</string>

  <string name="guess_text_view">Guess</string>
  <string name="guess_edit_text">0.0</string>

  <string name="acc_text_view">Accuracy Limit</string>
  <string name="acc_edit_text">0.0</string>

  <string name="iteration_text_view">Iteration Limit</string>
  <string name="iteration_edit_text">0.0</string>

  <string name="roots_button">Find Roots</string>
  <string name="add_to_array">Add Coef.</string>

  <string name="roots_text_view">Roots</string>

  <string name="complex_real_text_view">Real Part</string>
  <string name="complex_real_edit_text">0.0</string>

  <string name="complex_imaginary_text_view">Imaginary Part</string>
  <string name="complex_imaginary_edit_text">0.0</string>

  <string name="create_complex_button">Create Complex</string>

  <string name="calculate_all_button">Calculate</string>

  <string name="addition_text_view">Addition</string>
  <string name="multiplication_text_view">Multiplication</string>

</resources>
