<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poly_text_view"
        android:id="@+id/polyTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_text_view"
        android:id="@+id/guessTextView"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/polyEditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/polyEditText"
        android:layout_weight="0.38"
        android:ems="10"
        android:layout_alignTop="@+id/polyTextView"
        android:layout_alignParentEnd="true"
        android:text="@string/poly_edit_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guessEditText"
        android:layout_below="@+id/polyEditText"
        android:layout_alignStart="@+id/polyEditText"
        android:ems="10"
        android:text="@string/guess_edit_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acc_text_view"
        android:id="@+id/accTextView"
        android:layout_below="@+id/guessEditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accEditText"
        android:layout_below="@+id/guessEditText"
        android:layout_alignStart="@+id/guessEditText"
        android:ems="10"
        android:text="@string/acc_edit_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iteration_text_view"
        android:id="@+id/iterationTextView"
        android:layout_below="@+id/accEditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iterationLimitEditText"
        android:layout_below="@+id/accEditText"
        android:layout_alignStart="@+id/accEditText"
        android:ems="10"
        android:text="@string/iteration_edit_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/roots_text_view"
        android:id="@+id/rootsTextView"
        android:inputType="numberDecimal"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/iterationLimitEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roots_button"
        android:id="@+id/rootsButton"
        android:layout_alignTop="@+id/createComplexButton"
        android:layout_toEndOf="@+id/createComplexButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_array"
        android:id="@+id/addToArrayButton"
        android:layout_alignTop="@+id/createComplexButton"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complex_real_text_view"
        android:id="@+id/realTextView"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/iterationLimitEditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/realEditText"
        android:layout_alignBottom="@+id/realTextView"
        android:layout_alignStart="@+id/iterationLimitEditText"
        android:layout_alignEnd="@+id/iterationLimitEditText"
        android:text="@string/complex_imaginary_edit_text"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complex_imaginary_text_view"
        android:id="@+id/imaginaryTextView"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imaginaryEditText"
        android:layout_alignBottom="@+id/imaginaryTextView"
        android:layout_alignStart="@+id/realEditText"
        android:layout_alignEnd="@+id/realEditText"
        android:text="@string/complex_imaginary_edit_text"
        android:inputType="numberDecimal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_complex_button"
        android:id="@+id/createComplexButton"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/imaginaryEditText"
        android:layout_alignEnd="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_all_button"
        android:id="@+id/calculateButton"
        android:layout_below="@+id/createComplexButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition_text_view"
        android:id="@+id/additionTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/iterationTextView"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplication_text_view"
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/calculateButton" />


</RelativeLayout>
